# psql-migrate

./: .gitignore  ChangeLog.md  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  package.yaml  psql-migrate.cabal  stack.yaml
attic/: CHANGELOG.md  README.md
attic/src/Database/PostgreSQL/Simple/Migrate/Internal/: Opt.hs
attic/test/: Live.hs  Tests.hs
src/: Lib.hs
src/Database/PostgreSQL/Simple/: Migrate.hs
src/Database/PostgreSQL/Simple/Migrate/Internal/: Apply.hs  Error.hs  Finger.hs  Monad.hs  Opt.hs  Order.hs  Types.hs  Wrap.hs
test/: Live.hs  LiveM.hs  LiveUtils.hs  Spec.hs  Tests.hs
