cabal-version: 1.12

name:           psql-migrate
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/bhurt/psql-migrate#readme>
homepage:       https://github.com/bhurt/psql-migrate#readme
bug-reports:    https://github.com/bhurt/psql-migrate/issues
author:         Brian Hurt
maintainer:     bhurt42@gmail.com
copyright:      2023 Brian Hurt
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

Flag Devel
  Description:      Turn on warnings and turn off optimization
  Default:          False

source-repository head
  type: git
  location: https://github.com/bhurt/psql-migrate

library
  exposed-modules:  Database.PostgreSQL.Simple.Migrate
                    , Database.PostgreSQL.Simple.Migrate.Internal.Apply
                    , Database.PostgreSQL.Simple.Migrate.Internal.Finger
                    , Database.PostgreSQL.Simple.Migrate.Internal.Order
                    , Database.PostgreSQL.Simple.Migrate.Internal.Types
                    , Database.PostgreSQL.Simple.Migrate.Internal.Wrap
  hs-source-dirs:   src
  if flag(devel)
    ghc-options:    -Wall
                    -Werror
                    -O0
  else
    ghc-options:    -O2
  build-depends:    base >=4.7 && <5
                    , base64-bytestring
                    , bytestring
                    , case-insensitive
                    , containers
                    , cryptonite
                    , deepseq
                    , memory
                    , postgresql-simple
                    , terminal-size
                    , text
  default-language: Haskell2010

test-suite psql-migrate-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Tests
  hs-source-dirs:   test
  ghc-options:      -Wall
                    -Werror
                    -O1
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
      , HUnit
      , psql-migrate
  default-language: Haskell2010
