cabal-version:      3.8
name:               psql-migrate
version:            0.1.0.0
synopsis:           Short description of your package
description:
  Please see the README at <url>
category:           <category>
author:             <author>
maintainer:         <email>
copyright:          <author> 2025
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: <url>

Flag Devel
  Description:      Turn on warnings and turn off optimization
  Default:          False

common share
  build-depends:    base >=4.18 && <5
  default-language: GHC2021
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-local-signatures -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe

library
  import:          share
  exposed-modules:  Database.PostgreSQL.Simple.Migrate
                    , Database.PostgreSQL.Simple.Migrate.Internal.Apply
                    , Database.PostgreSQL.Simple.Migrate.Internal.Error
                    , Database.PostgreSQL.Simple.Migrate.Internal.Finger
                    , Database.PostgreSQL.Simple.Migrate.Internal.Opt
                    , Database.PostgreSQL.Simple.Migrate.Internal.Order
                    , Database.PostgreSQL.Simple.Migrate.Internal.Types
  hs-source-dirs:   src
  if flag(devel)
    ghc-options: -00
  else
    ghc-options:      -O2
    build-depends:    base >=4.7 && <5
                    , aeson >= 2.0.0
                    , base64-bytestring
                    , bytestring
                    , case-insensitive
                    , containers
                    , cryptonite
                    , deepseq
                    , memory
                    , postgresql-simple
                    , QuickCheck
                    , text

executable psql-migrate-test
  import :          share
  main-is:          Main.hs
  hs-source-dirs:   test src
